# replit-Contract

./: .gitignore  .replit  README.md  app.py  dms.db  pyproject.toml  replit.md
static/: app.js  style.css
templates/: base.html  download.html  edit_document.html  edit_user.html  login.html  master_documents.html  master_users.html  menu.html  report.html  upload.html  view_report.html
